--- a/style.css
+++ b/style.css
@@ -366,28 +366,30 @@ nav a:hover {
   background: linear-gradient(to right,rgb(168, 71, 216), rgb(212, 4, 4));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
+  font-size: 2.5vw;
   position: absolute;
   display: block;
   width: 40%;
   height: 50%;
-  top: 19%;
-  left: 65%;
+  top: 10%;
+  left: 55%;
 }
 
 .aboutme  .blacksrc .whyabout{
-  padding: 20px;
+  padding: 1vw;
   border-radius: 7px;
   color: rgb(37,37,37);
   font-family: Georgia, serif;
   box-shadow: 3px 3px 4px rgb(73, 122, 155);
-  line-height: 35px;
-  font-weight: 400;
+  font-size: 1.5vw;
+  line-height: 2vw;
+  font-weight: 400px;
   color: rgb(60,72,78);
   justify-items: center;
   position: absolute;
   display: flex;
   left: 50%;
-  top: 24%;
+  top: 16%;
   right: 40px;
   z-index: 1;
 }
