--- a/style.css
+++ b/style.css
@@ -340,7 +340,8 @@ nav a:hover {
   display: block;
   width: 100%;
   height: auto;
-
+  background-position:  center center;
+   background-size: cover;
 }
 
 .aboutme #imgs2 .blacksrc {
@@ -516,23 +517,16 @@ button:hover:active:before {
   font-family: 'Gilda Display', serif;
   font-size: 1.2vw bold;
 }
-
-#imgbg {
-  height: auto;
-  width: 100%;
-  margin-top: -3%;
-
-
-  /* background: linear-gradient(-45deg, #fdbb2d 0%, #904ED4 100%); */
-
+.certify{
+  background-image: url(src_img/desktop-lg-background-2500w.jpeg);
+  background-position:  center center;
+   background-size: cover;
+   margin-top: -.49vh;
 }
-
-.certify #imgbg {
-  position: absolute;
-  width: 100%;
-
+.darkmode .certify {
+  background: url(src_img/blck.jpg);
+  
 }
-
 .certify .certi h3 {
   justify-items: center;
   position: relative;
@@ -547,24 +541,27 @@ button:hover:active:before {
   font-weight: 400;
   margin: 0;
 }
-
+.darkmode .certify{
+  background-image: url(src_img/key.jpg);
+}
 /* card carousel */
 .outerbox {
-
+  scale: 0.99.87;
   justify-content: space-around;
-  margin-top: 6vh;
+  margin-top: 3vh;
   justify-items: center;
   margin-left: 5vw;
-  position: absolute;
   display: flex;
   z-index: 2;
   background-color: rgb(255, 233, 227);
   height: 70vh;
   width: 70vw;
 }
+
 .darkmode .outerbox {
-  background-color: rgb(152,169,176);
+  background-color: rgb(152, 169, 176);
 }
+
 .aboucerti {
   font-family: 'jost';
 }
@@ -636,10 +633,12 @@ button:hover:active:before {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.aboucerti{
-color: rgb(92,97,75);
+
+.aboucerti {
+  color: rgb(92, 97, 75);
 }
-.darkmode .aboucerti .cer{
+
+.darkmode .aboucerti .cer {
   background: linear-gradient(162deg, rgba(0, 0, 0, 1) 0%, rgb(121, 180, 214) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -713,8 +712,9 @@ color: rgb(92,97,75);
   }
 
   .outerbox {
-    scale: 0.99.87;
-    margin-top: -2.5vh;
+    scale: 0.99.70;
+    margin-top: -9vh;
+    justify-content: flex-start;
   }
 
 
@@ -723,7 +723,8 @@ color: rgb(92,97,75);
 @media only screen and (max-width:800px) {
   .outerbox {
     scale: 0.99.70;
-    margin-top: -3.9vh;
+    margin-top: -9vh;
+    justify-content: flex-start;
   }
 }
 
@@ -767,7 +768,11 @@ color: rgb(92,97,75);
   .outerbox {
     scale: 0.99.62;
     margin-top: -6.5vh;
+    justify-content: flex-start;
+  }
 
+  .aboucerti {
+    margin-top: 10%;
   }
 
 
@@ -812,8 +817,12 @@ color: rgb(92,97,75);
   .outerbox {
     width: 70vw;
     margin-top: -8.5vh;
+    justify-content: flex-start;
   }
 
+  .aboucerti {
+    scale: 0.9;
+  }
 }
 
 @media only screen and (max-width:600px) {
@@ -865,10 +874,11 @@ color: rgb(92,97,75);
     height: auto;
     height: 55vh;
     margin-top: -9.9vh;
+    justify-content: flex-start;
   }
 
   .carousel {
-    scale: 0.91;
+    scale: 0.90;
     bottom: 6.9vh;
   }
 
@@ -895,7 +905,7 @@ color: rgb(92,97,75);
     width: 70vw;
     height: 45vh;
     margin-top: -6vh;
-
+    justify-content: flex-start;
   }
 
   .carousel {
@@ -903,10 +913,11 @@ color: rgb(92,97,75);
   }
 
   .aboucerti {
+    margin-top: 10%;
     scale: 0.65;
     padding: 1vh 2.5vw;
   }
-  
+
 }
 
 @media only screen and (max-width:400px) {
@@ -942,17 +953,19 @@ color: rgb(92,97,75);
     width: 70vw;
     height: 40vh;
     margin-top: -5vh;
-    
+    justify-content: flex-start;
   }
+
   .carousel {
     height: 35.5vh;
   }
+
   .aboucerti {
     scale: 0.45;
     margin-right: -10vw;
 
   }
-  
+
 }
 
 @media only screen and (max-width:350px) {
@@ -960,7 +973,7 @@ color: rgb(92,97,75);
     scale: 0.8 0.6 0.1;
     width: 70vw;
     margin-top: -7.2vh;
-   
+    justify-content: flex-start;
   }
 
   .aboucerti {
@@ -968,5 +981,5 @@ color: rgb(92,97,75);
     margin-right: -10vw;
   }
 
-  .carousel {}
+
 }
