--- a/style.css
+++ b/style.css
@@ -340,8 +340,8 @@ nav a:hover {
   display: block;
   width: 100%;
   height: auto;
-  background-position:  center center;
-   background-size: cover;
+  background-position: center center;
+  background-size: cover;
 }
 
 .aboutme #imgs2 .blacksrc {
@@ -355,11 +355,15 @@ nav a:hover {
   left: 15%;
   width: 70%;
   height: 70%;
-  background: url(src_img/carbon-portfolio-bg-highres.jpeg)
+  background: url(src_img/carbon-portfolio-bg-highres.jpeg);
+  background-position: center center;
+  background-size: cover;
 }
 
 .darkmode .aboutme .blacksrc {
   background: url(src_img/left.png);
+  background-position: center center;
+  background-size: cover;
   position: absolute;
   top: 13%;
   left: 15%;
@@ -517,16 +521,19 @@ button:hover:active:before {
   font-family: 'Gilda Display', serif;
   font-size: 1.2vw bold;
 }
-.certify{
+
+.certify {
   background-image: url(src_img/desktop-lg-background-2500w.jpeg);
-  background-position:  center center;
-   background-size: cover;
-   margin-top: -.49vh;
+  background-position: center center;
+  background-size: cover;
+  margin-top: -.59vh;
 }
+
 .darkmode .certify {
-  background: url(src_img/blck.jpg);
-  
+  background-image: url(src_img/blck.jpg);
+
 }
+
 .certify .certi h3 {
   justify-items: center;
   position: relative;
@@ -541,9 +548,8 @@ button:hover:active:before {
   font-weight: 400;
   margin: 0;
 }
-.darkmode .certify{
-  background-image: url(src_img/key.jpg);
-}
+
+
 /* card carousel */
 .outerbox {
   scale: 0.99.87;
@@ -568,6 +574,7 @@ button:hover:active:before {
 
 .carousel {
 
+
   position: relative;
   display: flex;
   margin-top: 8vh;
@@ -581,6 +588,12 @@ button:hover:active:before {
 }
 
 .carousel-container {
+
+  /* Hide the horizontal scrollbar */
+  /* Adjust the height as needed for card height */
+
+  position: relative;
+
 
   position: absolute;
   display: flex;
@@ -611,7 +624,7 @@ button:hover:active:before {
 .card {
 
   height: max-content;
-  flex: 0 0 100px;
+  flex: 0 0 10px;
   /* Adjust the card height as needed */
   padding: 2vh;
   /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
@@ -659,11 +672,87 @@ button:hover:active:before {
   transition: ease-in-out .3s;
 }
 
+.skillspan1{
+
+}
+
+.skills h3 {
+  display: flex;
+  justify-content: center;
+  font-family: 'jost';
+  font-size: 5vw;
+  font-weight: 400;
+
+  font-size: 35px;
+  color: white;
+  line-height: 50px;
+}
+
+.darkmode .skills {
+
+  background-image: url(src_img/skill.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+
+.carousel-container1 {
+  scrollbar-width: none;
+  overflow-x: hidden;
+  /* Hide the horizontal scrollbar */
+  /* Adjust the width as needed for horizontal space */
+  height: 20vh;
+  /* Adjust the height as needed for card height */
+  margin-left: 10vw;
+  margin-right: 10vw;
+  position: relative;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
+.carousel1 {
+  
+  display: flex;
+  position: absolute;
+  width: auto;
+  /* Set a width large enough to accommodate all cards */
+  animation: scroll 15s linear infinite;
+  /* Adjust the animation duration as needed */
+
+}
+
+.item1 {
+  box-shadow: rgb(25, 26, 27) 0px 2px 4px 0px, rgb(34, 57, 80) 0px 2px 16px 0px;
+  border-radius: 100px;
+  margin-inline: 30px;
+
+  width: fit-content;
+  /* Adjust the width as needed for each card */
+  height: 100%;
+  margin-right: 1vw;
+  /* Adjust margin for spacing between cards */
+  padding: 2vh;
+  background-color: #f9f9f9;
+}
+footer{
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(-10%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 
 
 @keyframes cardFlow {
   0% {
-    transform: translateY(30vh);
+    transform: translateY(20vh);
     /* Change translateY for vertical movement */
   }
 
@@ -886,7 +975,10 @@ button:hover:active:before {
     scale: 0.79;
     padding: 10vh 5vw;
   }
-
+  .item1{
+    scale: 0.9;
+  }
+  
 }
 
 @media only screen and (max-width:500px) {
@@ -917,6 +1009,10 @@ button:hover:active:before {
     scale: 0.65;
     padding: 1vh 2.5vw;
   }
+  .item1{
+    scale: 0.85;
+  }
+ 
 
 }
 
